2001-09-30 08:20 GMT -3 Luiz Rafael Culik<culik@sl.conex.net>
   *contrib/hbzlib/zipnew.cpp
   contrib/hbzlib/zipcomp.cpp
   contrib/hbzlib/zip.c
   contrib/hbzlib/hbzip2.h
     * Added an second code block to all Compress/extraction function
     * Added some guard com specific platform
   *contrib/hbzlib/doc/zipnew.txt
     * Updated the docs to reflect the library changes

2001-09-27 14:33 UTC+0100 Viktor Szakats <viktor.szakats@syenar.hu>

   * source/rtl/memofile.c
     ! MEMOWRIT() - Restored CA-Cl*pper compatibility.

   * source/rtl/dbedit.prg
     ! DBEDIT() - Restored CA-Cl*pper compatibility.

   * source/rtl/tbrowse.prg
     ! Fixed AutoLite/Hilite/DeHilite() support. Now DBEDIT() works 
       as expected.

2001-09-27 01:52 GMT-3 Horacio Roldan <harbour_ar@yahoo.com.ar>
  * source/rtl/memofile.c
    * Fixed: MemoWrit added an EOF (0x1A) everytime 
      (under Windows), Reported by Brian Hays.
    * Fixed: MemoRead didn't strip the EOF char
      (under Windows).

2001-09-26 18:38 GMT-3 Horacio Roldan <harbour_ar@yahoo.com.ar>
  * source/rtl/dbedit.prg
    * Fixed no-hilighting problem, sent by Wilson Velazquez      

2001-09-24 08:45 GMT+1 Antonio Linares <alinares@fivetech.com>
   - contrib/hgf/gtk/tform.prg
   + contrib/hgf/gtk/form.prg
     * tform.prg module renamed as form.prg

   - contrib/hgf/gtk/tmenu.prg
   + contrib/hgf/gtk/menu.prg
     * tmenu.prg module renamed as menu.prg

   + contrib/hgf/gtk/dispatch.c
     * GTK c level to PRG level dispatcher

   + contrib/hgf/gtk/msginfo.c
     * GTK MsgInfo() implementation

   + contrib/hgf/gtk/creabutt.c
     * pushbuttons low level creation.

   + contrib/hgf/gtk/winctrl.prg
     * Class HBWinControl

   + contrib/hgf/gtk/general.prg
     * some low level functions

   + contrib/hgf/gtk/button.prg
     * Class HBButton

   * harbour/contrib/hgf/gtk/Makefile
   * harbour/contrib/hgf/gtk/creamenu.c
   * harbour/contrib/hgf/gtk/creawin.c
   * harbour/contrib/hgf/gtk/harbgtk.ch